--- a/games.html
+++ b/games.html
@@ -31,25 +31,18 @@
 			</a>
 		</div>
 	</header>
-		<div class="aside-left">
+	<div class="aside-left">
 		<h5 align="center"><b>Latest</b><h5>
-		<p align="center">Havent worked alot on the game recently but I think I will come right back up again.</p>
+		<p align="center">Super simple not even fun go do something else with you're free time...</p>
 	</div>
-	<main>
-		<h1 align="center" class="popup" onclick="myFunction()">Slime Adventure 2
-		</h1>
-		<p align="center">Slime Adventure 2 is the the waited sequel to Slime Adventure.
-
-I've been working hard on this game for a long time so I really hope you like it. 
-
-In the game u play as a green slime trying take down the red evil slimes (thats not racist). I made this game because i really like satisfying platformers. The whole meaning of the game is to be fun and an satisfying experince.
-
-Hope you like it!</p>
-	</main>
 	<aside>
-		<h4><iframe frameborder="0" src="https://itch.io/embed/1438877?bg_color=ff8000&amp;fg_color=ffffff&amp;link_color=d95609&amp;border_color=ff8000" width="180" height="165"><a href="https://mansymations.itch.io/slime-adventure-2">Slime Adventure 2 by Mansymations</a></iframe><h4>
+		<h4 align="center"><iframe frameborder="0" src="https://itch.io/embed/1438877?border_width=0&amp;bg_color=fff&amp;fg_color=ffffff&amp;link_color=d95609&amp;border_color=fff" width="180" height="165"><a href="https://mansymations.itch.io/slime-adventure-2">Slime Adventure 2 by Mansymations</a></iframe><h4>
 		<h4>Click on here to get the game:<a href="https://mansymations.itch.io/slime-adventure-2">Slime Adventure 2</a></h4>
 	</aside>
+	<main>
+		<h1 align="center" class="popup" onclick="myFunction()">Slime Adventure 2</h1>
+		<p align="center">Slime Adventure 2 is the the waited sequel to Slime Adventure. I've been working hard on this game for a long time so I really hope you like it. In the game u play as a green slime trying take down the red evil slimes (thats not racist). I made this game because i really like satisfying platformers. The whole meaning of the game is to be fun and an satisfying experince. Hope you like it!</p>
+	</main>
 	<footer>
 		<div class="left-footer">
 			<p align="center"></p>
@@ -62,16 +55,16 @@ Hope you like it!</p>
 	</header>
 	<div class="aside-left">
 		<h5 align="center"><b>Latest</b><h5>
-		<p align="center">Havent worked alot on the game recently but I think I will come right back up again.</p>
+		<p align="center">Its playable but not that fun. We'll see if I come back to this projects</p>
 	</div>
+	<aside>
+		<h4 align="center"><iframe frameborder="0" src="https://itch.io/embed/1201686?border_width=0&amp;bg_color=fff&amp;link_color=d95609&amp;border_color=fff" width="180" height="165"><a href="https://mansymations.itch.io/trys">Trys by Mansymations</a></iframe><h4>
+		<h4>Click on here to get the game:<a href="https://mansymations.itch.io/trys">Trys</a></h4>
+	</aside>
 	<main>
 		<h1 align="center">Trys</h1>
 		<p align="center">Its a shoot em up game where you shoot zombies. One day I was bored so I just watched Youtube for a bit then a saw a video about someone who made a shoot em up game. Then I said I can make a game like that. So I started making it. Hope you like it.</p>
 	</main>
-	<aside>
-		<h4><iframe frameborder="0" src="https://itch.io/embed/1201686?border_width=0&amp;bg_color=ff8000&amp;link_color=d95609&amp;border_color=ff8000" width="180" height="165"><a href="https://mansymations.itch.io/trys">Trys by Mansymations</a></iframe><h4>
-		<h4>Click on here to get the game:<a href="https://mansymations.itch.io/trys">Trys</a></h4>
-	</aside>
 	
 	</header>
 	
