--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 			</a>
 		</div>
 	</header>
+	<div align="center">
+	<img src="img/banner.png" style="width:100%;height:220px;">
+	</div>
 	<footer>
 		<div class="left-footer">
 			<p align="center"></p>
