--- a/other.html
+++ b/other.html
@@ -14,14 +14,16 @@
 	<link rel="shortcut icon" type="image/png" href="images/icon.png">
 </head>
 
-<body>
-	<header>
-		<div class="topnav">
+<body 	style="background-image: url(img/raind.gif);
+				background-attachment: fixed;
+				background-size: 1000px 1000px;">
+	<header style="background-color: #03ad20">
+		<div class="topnav" style="background-color: #03ad20">
   <a href="index.html">Home</a>
   <!-- Navigation links (hidden by default) -->
   <div id="myLinks">
 	<a href="games.html">Games</a>
-	<a href="other.html" class="active">Other</a>
+	<a href="other.html" class="active" style="background-color: #067819">Other</a>
 	<a href="contact.html">Contact</a>
     <a href="about.html">About</a>
   </div>
@@ -129,12 +131,12 @@
 			<p align="center"></p>
 		</div>
 		<div class="center-footer">
-			<p align="center">Hope you like my games :)</p>
+			<p align="center">Plz stop looking here this is as old as the declaration of independence...</p>
 		</div>
 		<div class="right-footer">
 			<p align="center"></p>
 		</div>
-		<div class="copyright">
+		<div class="copyright" style="background-color: #10c22d">
 			<p align="center">Copyright &copy; 2020 - 2024 mansymations.com</p>
 		</div>
 	</footer>
