--- a/about.html
+++ b/about.html
@@ -31,31 +31,16 @@
 			</a>
 		</div>
 	</header>
-	<div class="aside-left">
-			<a hres="http://google.com">
-			
-				<img src="img/New Canvas.png"/>
-			</a>
-		<h5 align="center"><h5>
-		<p align="center"></p>
-	</div>
 	<main>
 		<h1 align="center" class="glow">About Me</h1>
 		<p align="center">There's nothing to know about me... </p>
 	</main>
-	<aside>
-		<a hres="http://google.com" onclick="myFunction()">
-			
-			<img src="img/icon.png"/>
-		</a>
-		<div id="snackbar">Thas MEEEEE!!!!</div>
-	</aside>
 	<footer>
 		<div class="left-footer">
 			<p align="center"></p>
 		</div>
 		<div class="center-footer">
-			<p align="center">Hope you like my games :)</p>
+			<p align="center">lol yeah...</p>
 		</div>
 		<div class="right-footer">
 			<p align="center"></p>
