--- a/contact.html
+++ b/contact.html
@@ -31,12 +31,6 @@
 			</a>
 		</div>
 	</header>
-	<div class="aside-left">
-		<a hres="http://google.com">
-			
-				<img src="img/New Canvas.png"/>
-		</a>
-	</div>
 	<main>
 		<h1 align="center" class="glow">Contact</h1>
 			<div class="discord" align="center">
@@ -48,19 +42,12 @@
 				</a>
 			</div>
 	</main>
-	<aside>
-		<a hres="http://google.com" onclick="myFunction()">
-			
-			<img src="img/icon.png"/>
-		</a>
-		<div id="snackbar">Thas MEEEEE!!!!</div>
-	</aside>
 	<footer>
 		<div class="left-footer">
 			<p align="center"></p>
 		</div>
 		<div class="center-footer">
-			<p align="center">Hope you like my games :)</p>
+			<p align="center">What's up!</p>
 		</div>
 		<div class="right-footer">
 			<p align="center"></p>
