--- a/other.html
+++ b/other.html
@@ -13,7 +13,7 @@
 	<title>Other | Mansymations</title>
 	<link rel="shortcut icon" type="image/png" href="images/icon.png">
 </head>
-
+<div class=bg style="width-min: 500px; background-color: #c2ffc2;">
 <body 	style="background-image: url(img/raind.gif);
 				background-attachment: fixed;
 				background-size: 1000px 1000px;">
@@ -32,38 +32,39 @@
 				<i class="fa fa-bars"></i>
 			</a>
 		</div>
-</div>
 	</header>
+	<footer></footer>
+	<main style="width: 800px">
 	<div>
 		<h1 align="center" class="glow">Animations & Other</h1>
 		<p align="center"><video height="400" controls>
 	<source src="anim/0.mp4" type="video/mp4">
-  Your browser does not support HTML video.
-</video></p>
-<p align="center"><video height="400" controls>
+		Your browser does not support HTML video.
+		</video></p>
+		<p align="center"><video height="400" controls>
 	<source src="anim/1.mp4" type="video/mp4">
-  Your browser does not support HTML video.
-</video></p>
-<p align="center"><video height="400" controls>
+		Your browser does not support HTML video.
+		</video></p>
+		<p align="center"><video height="400" controls>
 	<source src="anim/2.mp4" type="video/mp4">
-  Your browser does not support HTML video.
-</video></p>
-<p align="center"><video height="400" controls>
+		Your browser does not support HTML video.
+		</video></p>
+		<p align="center"><video height="400" controls>
 	<source src="anim/3.mp4" type="video/mp4">
-  Your browser does not support HTML video.
-</video></p>
-<p align="center"><video height="400" controls>
+		Your browser does not support HTML video.
+		</video></p>
+		<p align="center"><video height="400" controls>
 	<source src="anim/4.mp4" type="video/mp4">
-  Your browser does not support HTML video.
-</video></p>
-<p align="center"><video height="400" controls>
+		Your browser does not support HTML video.
+		</video></p>
+		<p align="center"><video height="400" controls>
 	<source src="anim/5.mp4" type="video/mp4">
-  Your browser does not support HTML video.
-</video></p>
-<p align="center"><video height="400" controls>
+		Your browser does not support HTML video.
+		</video></p>
+		<p align="center"><video height="400" controls>
 	<source src="anim/6.mp4" type="video/mp4">
-  Your browser does not support HTML video.
-</video></p>
+		Your browser does not support HTML video.
+		</video></p>
 		<p align="center" height="400">
 		<a hres="http://google.com">
 			
@@ -89,7 +90,6 @@
 			
 				<img src="anim/p5.png" height="400"/>
 		</a></p>
-		<button class="button button1" align="center">HAHA</button>
 		<p align="center" height="400">
 		<a hres="http://google.com">
 			
@@ -110,10 +110,10 @@
 			
 				<img src="anim/p9.png" height="400"/>
 		</a></p>
-		<p align="center" height="400">
+		<p align="center">
 		<a hres="http://google.com">
 			
-				<img src="anim/p10.png" height="400"/>
+				<img src="anim/p10.png" />
 		</a></p>
 		<p align="center" height="400">
 		<a hres="http://google.com">
@@ -126,20 +126,23 @@
 				<img src="anim/p12.png" height="400"/>
 		</a></p>
 	</div>
-	<footer>
-		<div class="left-footer">
+	</main>
+	<footer></footer>
+	<footer style="background-color: #012401;">
+		<div class="left-footer" style="background-color: #012401;">
 			<p align="center"></p>
 		</div>
-		<div class="center-footer">
+		<div class="center-footer" style="background-color: #012401; font-size: 10px;">
 			<p align="center">Plz stop looking here this is as old as the declaration of independence...</p>
 		</div>
-		<div class="right-footer">
+		<div class="right-footer" style="background-color: #012401;">
 			<p align="center"></p>
 		</div>
 		<div class="copyright" style="background-color: #10c22d">
-			<p align="center">Copyright &copy; 2020 - 2024 mansymations.com</p>
+			<p align="center">Copyright &copy; 2020 - 2024 mansymations.netlify.app</p>
 		</div>
 	</footer>
+</div>
 </body>
 
 <html>
