--- a/about.html
+++ b/about.html
@@ -31,6 +31,7 @@
 			</a>
 		</div>
 	</header>
+	<footer></footer>
 	<main>
 		<h1 align="center" class="glow">About Me</h1>
 		<p align="center">There's nothing to know about me... </p>
@@ -46,7 +47,7 @@
 			<p align="center"></p>
 		</div>
 		<div class="copyright">
-			<p align="center">Copyright &copy; 2020 - 2024 mansymations.com</p>
+			<p align="center">Copyright &copy; 2020 - 2024 mansymations.netlify.app</p>
 		</div>
 	</footer>
 </body>
