--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,7 @@
 			</a>
 		</div>
 	</header>
+	<footer></footer>
 	<main>
 		<h1 align="center" class="glow">Contact</h1>
 			<div class="discord" align="center">
@@ -53,7 +54,7 @@
 			<p align="center"></p>
 		</div>
 		<div class="copyright">
-			<p align="center">Copyright &copy; 2020 - 2024 mansymations.com</p>
+			<p align="center">Copyright &copy; 2020 - 2024 mansymations.netlify.app</p>
 		</div>
 	</footer>
 <script>
