--- a/games.html
+++ b/games.html
@@ -31,6 +31,7 @@
 			</a>
 		</div>
 	</header>
+	<footer></footer>
 	<div class="aside-left">
 		<h5 align="center"><b>Latest</b><h5>
 		<p align="center">Super simple not even fun go do something else with you're free time...</p>
@@ -79,7 +80,7 @@
 			<p align="center"></p>
 		</div>
 		<div class="copyright">
-			<p align="center">Copyright &copy; 2020 - 2024 mansymations.com</p>
+			<p align="center">Copyright &copy; 2020 - 2024 mansymations.netlify.app</p>
 		</div>
 	</footer>
 	</div>
