--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			</a>
 		</div>
 	</header>
+	<footer></footer>
 	<div align="center">
 	<img src="img/banner.png" style="width:100%;height:220px;">
 	</div>
@@ -45,7 +46,7 @@
 			<p align="center"></p>
 		</div>
 		<div class="copyright">
-			<p align="center">Copyright &copy; 2020 - 2024 mansymations.com</p>
+			<p align="center">Copyright &copy; 2020 - 2024 mansymations.netlify.app</p>
 		</div>
 	</footer>
 <script>
