--- a/index.html
+++ b/index.html
@@ -33,8 +33,23 @@
 	</header>
 	<footer></footer>
 	<div align="center">
+	
 	<img src="img/banner.png" style="width:100%;height:220px;">
 	</div>
+	
+	<main>
+		
+		<p align="center">
+		<a href="https://www.reddit.com/user/MansyS_/">
+					<img src="img/button.gif"/>
+		</a>
+		<br>
+		If you're bored or something you could go and check out my reddit! Possibly, maybe, idk...
+		</p>
+		<br>
+		
+		<img align="right" src="img/cat.gif" style="width: 5%; border-width: 0px; bottom: 0; position: relative;">
+	</main>
 	<footer>
 		<div class="left-footer">
 			<p align="center"></p>
