--- a/other.html
+++ b/other.html
@@ -10,7 +10,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-	<title>Other | Mansymations</title>
+	<title>Projects | Mansymations</title>
 	<link rel="shortcut icon" type="image/png" href="images/icon.png">
 </head>
 <div class=bg style="width-min: 500px; background-color: #c2ffc2;">
@@ -23,7 +23,7 @@
   <!-- Navigation links (hidden by default) -->
   <div id="myLinks">
 	<a href="games.html">Games</a>
-	<a href="other.html" class="active" style="background-color: #067819">Other</a>
+	<a href="other.html" class="active" style="background-color: #067819">Projects</a>
 	<a href="contact.html">Contact</a>
     <a href="about.html">About</a>
   </div>
@@ -35,7 +35,7 @@
 	</header>
 	<footer></footer>
 	<main style="width: 800px">
-	<div>
+	<!-- <div> Old stuff
 		<h1 align="center" class="glow">Animations & Other</h1>
 		<p align="center"><video height="400" controls>
 	<source src="anim/0.mp4" type="video/mp4">
@@ -125,7 +125,29 @@
 			
 				<img src="anim/p12.png" height="400"/>
 		</a></p>
+	</div> -->
+	<h1 align="center" class="underline">Projects</h1>
+	
+	<div class="box">
+		
+		<div align="left">
+		
+			<img src="img/project01/project01.png" 
+			style="width: 25%; 
+			float: left;
+			margin-right: 10px;
+			"/>
+			
+			<p class="light_purple" style="padding:0px; float:right;">NEW!!!</p>
+			<p class="dark_red" style="padding:0px;">Knockoff NES -> Raspberry Pi case </p> 
+			<p style="font-size: 12px;">Turning my chinese knockoff NES classic into a case for my Raspberry Pi 4</a>
+			<a href="projects/nes.html" style="padding: 0px;">[More Info]</a>
+			<p class="red" align="center" style="padding: 0px; float:left;">(ONGOING) </p>
+		</div>
 	</div>
+	
+	<br>
+	
 	</main>
 	<footer></footer>
 	<footer style="background-color: #012401;">
