--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
   <!-- Navigation links (hidden by default) -->
   <div id="myLinks">
 	<a href="games.html">Games</a>
-	<a href="other.html">Other</a>
+	<a href="other.html">Projects</a>
 	<a href="contact.html">Contact</a>
     <a href="about.html" class="active">About</a>
   </div>
@@ -32,7 +32,7 @@
 		</div>
 	</header>
 	<footer></footer>
-	<main>
+	<main style="height:300px;">
 		<h1 align="center" class="glow">About Me</h1>
 		<p align="center">There's nothing to know about me... </p>
 	</main>
