--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
   <!-- Navigation links (hidden by default) -->
   <div id="myLinks">
 	<a href="games.html">Games</a>
-	<a href="other.html">Other</a>
+	<a href="other.html">Projects</a>
 	<a href="contact.html" class="active">Contact</a>
     <a href="about.html">About</a>
   </div>
@@ -32,14 +32,14 @@
 		</div>
 	</header>
 	<footer></footer>
-	<main>
+	<main style="height:300px;">
 		<h1 align="center" class="glow">Contact</h1>
 			<div class="discord" align="center">
 				<a href="https://discord.gg/GVUXahV3aJ">
-					<img src="img/disc_icon.png"/>
+					<img src="img/disc_icon.png" style="border-width: 0px;"/>
 				</a>
 				<a href="https://www.tiktok.com/@mansymations?">
-					<img src="img/tik_icon.png"/>
+					<img src="img/tik_icon.png" style="border-width: 0px;"/>
 				</a>
 			</div>
 	</main>
