--- a/games.html
+++ b/games.html
@@ -21,7 +21,7 @@
   <!-- Navigation links (hidden by default) -->
   <div id="myLinks">
 	<a href="games.html" class="active">Games </a>
-	<a href="other.html">Other</a>
+	<a href="other.html">Projects</a>
 	<a href="contact.html">Contact</a>
     <a href="about.html">About</a>
   </div>
