--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Navigation links (hidden by default) -->
   <div id="myLinks">
 	<a href="games.html">Games</a>
-	<a href="other.html">Other</a>
+	<a href="other.html">Projects</a>
 	<a href="contact.html">Contact</a>
     <a href="about.html">About</a>
   </div>
@@ -37,7 +37,7 @@
 	<img src="img/banner.png" style="width:100%;height:220px;">
 	</div>
 	
-	<main>
+	<main style="min-height:100px;">
 		
 		<p align="center">
 		<a href="https://www.reddit.com/user/MansyS_/">
@@ -47,15 +47,13 @@
 		If you're bored or something you could go and check out my reddit! Possibly, maybe, idk...
 		</p>
 		<br>
-		
-		<img align="right" src="img/cat.gif" style="width: 5%; border-width: 0px; bottom: 0; position: relative;">
 	</main>
 	<footer>
 		<div class="left-footer">
 			<p align="center"></p>
 		</div>
 		<div class="center-footer">
-			<p align="center">Gaming :)</p>
+			<p align="center">Gaming :) <img src="img/cat.gif" style="width: 5%; border-width: 0px;"></p>
 		</div>
 		<div class="right-footer">
 			<p align="center"></p>
