--- a/projects/nes.html
+++ b/projects/nes.html
@@ -55,9 +55,9 @@
 			"/>
 			
 			
-<p style="float:center; padding:0px;">When I opened it up I saw that the power button luckily was a different module from the rest of the board. Which mean't I could reuse the power button for the Pi and possibly even the power LED.</p>
+<p style="float:center; padding:0px;">When I opened it up I saw that the power button luckily was a different module from the rest of the board. Which meant I could reuse the power button for the Pi and possibly even the power LED.</p>
 <br>
-<p style="float:center; padding:0px;">As You can see on the right I started to desolder the cables from the board.</p>
+<p style="float:center; padding:0px;">As You can see on the left I started to desolder the cables from the board.</p>
 
 </main>
 
@@ -75,7 +75,7 @@
 			margin-right: 10px;
 			"/>
 			
-<p style="float:center; padding:0px;">I started cutting the cables apart from eachother. So I could solder female pin connectors to the cables. Im not a pro solder guy here so I didn't do a great job here but it worked out in the end XD.</p>
+<p style="float:center; padding:0px;">I started cutting the cables apart from eachother. So I could solder female pin connectors to the cables. Im not a pro solder guy so I didn't do a great job here but it worked out in the end XD.</p>
 <br>
 <p style="float:center; padding:0px;">After that I installed retropie to the Raspberry Pi and I figured out that you have to write a shutdown script for the power button to work. And after that It works like a charm!</p>
 
@@ -130,6 +130,8 @@
 </div>
 
 <p style="float:center; padding:0px;">I put it together for the picture here and started marking with black tape where I was gonna cut holes. </p>
+<br>
+<p style="float:center; padding:0px;">(I forgot to mention that earlier I accidentally busted the power LED somehow ¯\_(ツ)_/¯)
 
 </main>
 
