--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 	<img src="img/banner.png" style="width:100%;height:220px;">
 	</div>
 	
+	<br>
+	
 	<main style="min-height:100px;">
 		
 		<p align="center">
@@ -45,9 +47,19 @@
 		</a>
 		<br>
 		If you're bored or something you could go and check out my reddit! Possibly, maybe, idk...
+		<br> <br>
+		Im currently working on the website as much as possible so it would be really nice of you to give me some extra feedback by clicking<a href="http://users4.smartgb.com/g/g.php?a=s&i=g44-82511-9f">here.</a>
 		</p>
 		<br>
 	</main>
+	
+	<br>
+	
+	<main style="width: 600px; padding: 20px;">
+	<h1 class="red" align="center" style="padding:0px;">UNDER CONSTRUCTION...
+	<img src="img/under.jpg" style="border-width: 0px;">
+	</main>
+	
 	<footer>
 		<div class="left-footer">
 			<p align="center"></p>
