--- a/projects/nes.html
+++ b/projects/nes.html
@@ -139,11 +139,38 @@
 
 <main style="width: 860px; padding: 20px;">
 
+
+<div style="height:400px">
+<img src="../img/project01/12.jpg" style="width: 30%; 
+			float: left;
+			margin-right: 10px;
+			"/>
+			
+<img src="../img/project01/13.jpg" style="width: 30%; 
+			float: left;
+			margin-right: 10px;
+			"/>	
+			
+</div>
+
+<p style="float:center; padding:0px;">So this didn't work out exactly as I planned...</p>
+<br>
+<p style="float:center; padding:0px;">The upper USB ports don't really fit. But it is a work in progress. The Raspberry Pi isn't stuck in place either. So it wiggles around everytime I plug something in. I put some glue to put some height for the Pi but it ended up backfiring and making it to tall now. Which is why the upper ports are unusable.</p>
+<br>
+<p style="float:center; padding:0px;">Don't worry I can problably fix this....
+
+</main>
+
+<br>
+
+<main style="width: 860px; padding: 20px;">
+
 <h1 class="red" align="center" style="padding:0px;">UNDER CONSTRUCTION...
 <img src="../img/under.jpg" style="border-width: 0px;">
 
 
 </main>
+
 
 <footer>
 		<div class="left-footer">
