--- a/other.html
+++ b/other.html
@@ -132,17 +132,18 @@
 		
 		<div align="left">
 		
+			<a href="projects/nes.html">
 			<img src="img/project01/project01.png" 
 			style="width: 25%; 
 			float: left;
 			margin-right: 10px;
-			"/>
+			"/></a>
 			
 			<p class="light_purple" style="padding:0px; float:right;">NEW!!!</p>
 			<p class="dark_red" style="padding:0px;">Knockoff NES -> Raspberry Pi case </p> 
 			<p style="font-size: 12px;">Turning my chinese knockoff NES classic into a case for my Raspberry Pi 4</a>
-			<a href="projects/nes.html" style="padding: 0px;">[More Info]</a>
 			<p class="red" align="center" style="padding: 0px; float:left;">(ONGOING) </p>
+			<a href="projects/nes.html" align="center" style="padding: 0px; float: right; ">[READ BLOG]</a>
 		</div>
 	</div>
 	
