--- a/projects/nes.html
+++ b/projects/nes.html
@@ -21,8 +21,8 @@
 <main style="width: 900px">
 <h2 align="center">Chinese NES case tranformation</h1>
 <p align="center"><a href="../other.html" style="padding: 0px;">[Go Back]</a> Published: Sep. 4th 2024 <p class="red" align="center" style="padding: 0px;">(ONGOING)</p></p>
-<p>This is my first "blog". I just wanna document me transforming this knockoff chinese NES classic.</p>
-<p>I got this for christmas 2018 from my uncle and I haven't used it since basically lol. So now we're making it into a silly little case for my Raspberry Pi 4.</p>
+<p>This is my first "blog". I just wanted to basically document me transforming this knockoff chinese NES classic into a case for my Raspberry Pi 4</p>
+<p>I got this for christmas 2018 from my uncle and I haven't used it since basically lol. So now we're making it into a silly little case for my Raspberry Pi.</p>
 <p>Im gonna stop yapping and start to write the actual blog or whatever.</p>
 </main>
 
@@ -40,8 +40,8 @@
 			margin-right: 10px;
 			"/>
 			
-<p style="float:center; padding:0px;">Before I began the transformation I played Super Mario Bros. on it for the last time ever :,(</p>
-<p style="float:center; padding:0px;">If you would like to see when I played this "console", I actually recorded it on my <a href="https://www.tiktok.com/@mansymations" style="padding: 0px;">tiktok</a>. (Ew cringe)</p>
+<p style="float:center; padding:0px;">Before I began the transformation I played Super Mario Bros. on it for the very last time ever :,(</p>
+<p style="float:center; padding:0px;">If you would like to see when I played this "console", I actually recorded it on my <a href="https://www.tiktok.com/@mansymations" style="padding: 0px;">tiktok</a>.</p>
 
 </main>
 
@@ -55,9 +55,9 @@
 			"/>
 			
 			
-<p style="float:center; padding:0px;">When I opened it up I saw that the power button luckily was a different module from the rest of the board. Which meant I could reuse the power button for the Pi and possibly even the power LED.</p>
+<p style="float:center; padding:0px;">When I opened it up I saw that the power button was a different module from the rest of the board. Which meant I could reuse the power button for the Pi and possibly even the power LED.</p>
 <br>
-<p style="float:center; padding:0px;">As You can see on the left I started to desolder the cables from the board.</p>
+<p style="float:center; padding:0px;">As you can see on the left I started to desolder the cables from the board.</p>
 
 </main>
 
@@ -77,7 +77,7 @@
 			
 <p style="float:center; padding:0px;">I started cutting the cables apart from eachother. So I could solder female pin connectors to the cables. Im not a pro solder guy so I didn't do a great job here but it worked out in the end XD.</p>
 <br>
-<p style="float:center; padding:0px;">After that I installed retropie to the Raspberry Pi and I figured out that you have to write a shutdown script for the power button to work. And after that It works like a charm!</p>
+<p style="float:center; padding:0px;">After that I installed retropie to the Raspberry Pi and I figured out that you have to write a shutdown script for the power button to work. And after all that it works like a charm!</p>
 
 </main>
 
@@ -104,6 +104,8 @@
 </div>
 
 <p style="float:center; padding:0px;">It took a long time to figure out what kind of position I wanted to use for my Raspberry Pi. In the end I actually asked my mother for a second opinion and she chose the position in the middle picture so that what we're going with ¯\_(ツ)_/¯. </p>
+<br>
+<p style="float:center; padding:0px;">EDIT: I went for the middle picture position but just not upside down like the picture.</p>
 
 </main>
 
@@ -155,9 +157,35 @@
 
 <p style="float:center; padding:0px;">So this didn't work out exactly as I planned...</p>
 <br>
-<p style="float:center; padding:0px;">The upper USB ports don't really fit. But it is a work in progress. The Raspberry Pi isn't stuck in place either. So it wiggles around everytime I plug something in. I put some glue to put some height for the Pi but it ended up backfiring and making it to tall now. Which is why the upper ports are unusable.</p>
+<p style="float:center; padding:0px;">The upper USB ports don't really fit. But it is a work in progress. The Raspberry Pi isn't stuck in place either. So it wiggles around everytime I plug something in. I put some glue to put some height for the Pi but it ended up backfiring and making it to high up. Which is why the upper ports are unusable.</p>
 <br>
 <p style="float:center; padding:0px;">Don't worry I can problably fix this....
+
+</main>
+
+<br>
+
+<main style="width: 860px; padding: 20px;">
+
+
+<div style="height:400px">
+<img src="../img/project01/14.gif" style="width: 30%; 
+			float: left;
+			margin-right: 10px;
+			"/>
+			
+<img src="../img/project01/15.jpg" style="width: 60%; 
+			float: left;
+			margin-right: 10px;
+			"/>	
+			
+</div>
+
+<p style="float:center; padding:0px;">I found this old cpu fan. So I just thought it could be used with the pi.</p>
+<br>
+<p style="float:center; padding:0px;">The fan had a 3-pin connector so I cut it off and soldered the 1-pin connectors to the individual cables instead. And KABOOM everything just worked without any issues! I tried to make the fan controlled by the cpu's temperatures but it just didn't work for some reason.</p>
+<br>
+<p style="float:center; padding:0px;">I will get back to the actual case now.
 
 </main>
 
