--- a/games.html
+++ b/games.html
@@ -53,7 +53,7 @@
 		</div>
 	</footer>
 	
-	</header>
+	
 	<div class="aside-left">
 		<h5 align="center"><b>Latest</b><h5>
 		<p align="center">Its playable but not that fun. We'll see if I come back to this projects</p>
@@ -66,6 +66,29 @@
 		<h1 align="center">Trys</h1>
 		<p align="center">Its a shoot em up game where you shoot zombies. One day I was bored so I just watched Youtube for a bit then a saw a video about someone who made a shoot em up game. Then I said I can make a game like that. So I started making it. Hope you like it.</p>
 	</main>
+	<footer>
+		<div class="left-footer">
+			<p align="center"></p>
+		</div>
+		<div class="right-footer">
+			<p align="center"></p>
+		</div>
+	</footer>
+	
+	
+	<div class="aside-left">
+		<h5 align="center"><b>Latest</b><h5>
+		<p align="center">I made the game playable in browser but its kinda janky and the grass texture is missing for some reason ¯\_(ツ)_/¯</p>
+	</div>
+	<aside>
+		<h4 align="center"><iframe frameborder="0" src="https://itch.io/embed/2049823?border_width=0&amp;fg_color=d95609&amp;link_color=d95609&amp;border_color=fff" width="180" height="165"><a href="https://mansymations.itch.io/project-unity-test">Project unity test by Mansymations</a></iframe><h4>
+		<h4>Click on here to get the game:<a href="https://mansymations.itch.io/project-unity-test">Unity Project</a></h4>
+	</aside>
+	<main>
+		<h1 align="center">Project Unity 3D platformer</h1>
+		<p align="center">Its a simple test 3d platformer game that I made while playing around in unity. I made this in the beginning of 2023 and I basically haven't done anything since, other than porting the game to html5. Give it a try if ur that bored...</p>
+	</main>
+	
 	
 	</header>
 	
