--- a/other.html
+++ b/other.html
@@ -128,6 +128,27 @@
 	</div> -->
 	<h1 align="center" class="underline">Projects</h1>
 	
+	<div class="box" style="background-color: black; color: white;">
+		
+		<div align="left">
+		
+			<a href="projects/amd.html">
+			<img src="img/project02/project02.png" 
+			style="width: 25%; 
+			float: left;
+			margin-right: 10px;
+			"/></a>
+			
+			<p class="light_purple" style="padding:0px; float:right;">NEW!!!</p>
+			<p class="dark_red" style="padding:0px;">Building the ALL AMD PC!!</p> 
+			<p style="font-size: 12px;">Building my first AMD PC that will be used as my main machine!</a>
+			<p class="red" align="center" style="padding: 0px; float:left;">(ONGOING) </p>
+			<a href="projects/amd.html" align="center" style="padding: 0px; float: right; ">[READ BLOG]</a>
+		</div>
+	</div>
+	
+	<br>
+	
 	<div class="box">
 		
 		<div align="left">
@@ -139,7 +160,6 @@
 			margin-right: 10px;
 			"/></a>
 			
-			<p class="light_purple" style="padding:0px; float:right;">NEW!!!</p>
 			<p class="dark_red" style="padding:0px;">Knockoff NES -> Raspberry Pi case </p> 
 			<p style="font-size: 12px;">Turning my chinese knockoff NES classic into a case for my Raspberry Pi 4</a>
 			<p class="red" align="center" style="padding: 0px; float:left;">(ONGOING) </p>
@@ -156,13 +176,13 @@
 			<p align="center"></p>
 		</div>
 		<div class="center-footer" style="background-color: #012401; font-size: 10px;">
-			<p align="center">Plz stop looking here this is as old as the declaration of independence...</p>
+			<p align="center">Go read some of my project blogs!</p>
 		</div>
 		<div class="right-footer" style="background-color: #012401;">
 			<p align="center"></p>
 		</div>
 		<div class="copyright" style="background-color: #10c22d">
-			<p align="center">Copyright &copy; 2020 - 2024 mansymations.netlify.app</p>
+			<p align="center">Copyright &copy; 2020 - 2025 mansymations.netlify.app</p>
 		</div>
 	</footer>
 </div>
