--- a/projects/nes.html
+++ b/projects/nes.html
@@ -193,6 +193,33 @@
 
 <main style="width: 860px; padding: 20px;">
 
+
+<div style="height:400px">
+
+<img src="../img/project01/16.jpg" style="width: 40%; 
+			float: left;
+			margin-right: 10px;
+			"/>	
+
+<img src="../img/project01/17.jpg" style="width: 40%; 
+			float: left;
+			margin-right: 10px;
+			"/>	
+			
+</div>
+
+<p style="float:center; padding:0px;">I made some holes for the fan as you can see lol.</p>
+<br>
+<p style="float:center; padding:0px;">I also took two screws and screwed in the fan so now its properly mounted inside the chassi.</p>
+<br>
+<p style="float:center; padding:0px;">I also mounted the rpi with two nails from the bottom (if you look closely you can see the nails).</p>
+
+</main>
+
+<br>
+
+<main style="width: 860px; padding: 20px;">
+
 <h1 class="red" align="center" style="padding:0px;">UNDER CONSTRUCTION...
 <img src="../img/under.jpg" style="border-width: 0px;">
 
@@ -211,7 +238,7 @@
 			<p align="center"></p>
 		</div>
 		<div class="copyright">
-			<p align="center">Copyright &copy; 2020 - 2024 mansymations.netlify.app</p>
+			<p align="center">Copyright &copy; 2020 - 2025 mansymations.netlify.app</p>
 		</div>
 </footer>
 
