--- a/projects/amd.html
+++ b/projects/amd.html
@@ -20,7 +20,7 @@
 
 <main style="background-color: ; width: 900px;">
 <h2 align="center">AMD PC building process</h1>
-<p align="center"><a href="../other.html" style="padding: 0px;">[Go Back]</a> Published: Jan. 12th 2025 <p class="red" align="center" style="padding: 0px;">(ONGOING)</p></p>
+<p align="center"><a href="../projects.html" style="padding: 0px;">[Go Back]</a> Published: Jan. 12th 2025 <p class="red" align="center" style="padding: 0px;">(ONGOING)</p></p>
 <p>In this blog I am showing and talking about the process behind building my new pc.</p>
 <p>This is the second PC that I've built from scratch. So im still kinda nervous because this PC is the first brand new computer that I've built.</p>
 <p>Im gonna stop yapping and start to write the actual blog or whatever.</p>
