--- a/projects/nes.html
+++ b/projects/nes.html
@@ -20,7 +20,7 @@
 
 <main style="width: 900px">
 <h2 align="center">Chinese NES case tranformation</h1>
-<p align="center"><a href="../other.html" style="padding: 0px;">[Go Back]</a> Published: Sep. 4th 2024 <p class="red" align="center" style="padding: 0px;">(ONGOING)</p></p>
+<p align="center"><a href="../projects.html" style="padding: 0px;">[Go Back]</a> Published: Sep. 4th 2024 <p class="red" align="center" style="padding: 0px;">(ONGOING)</p></p>
 <p>This is my first "blog". I just wanted to basically document me transforming this knockoff chinese NES classic into a case for my Raspberry Pi 4</p>
 <p>I got this for christmas 2018 from my uncle and I haven't used it since basically lol. So now we're making it into a silly little case for my Raspberry Pi.</p>
 <p>Im gonna stop yapping and start to write the actual blog or whatever.</p>
