--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Navigation links (hidden by default) -->
   <div id="myLinks">
 	<a href="games.html">Games</a>
-	<a href="other.html">Projects</a>
+	<a href="projects.html">Projects</a>
 	<a href="contact.html">Contact</a>
     <a href="about.html">About</a>
   </div>
@@ -71,7 +71,7 @@
 			<p align="center"></p>
 		</div>
 		<div class="copyright">
-			<p align="center">Copyright &copy; 2020 - 2024 mansymations.netlify.app</p>
+			<p align="center">Copyright &copy; 2020 - 2025 mansysite.org</p>
 		</div>
 	</footer>
 <script>
