Faster image loading

--- a/projects/amd.html
+++ b/projects/amd.html
@@ -26,7 +26,14 @@
 <p>Im gonna stop yapping and start to write the actual blog or whatever.</p>
 </main>
 
+<br>
 
+<main style="width: 860px; padding: 20px;">
+
+<h1 class="red" align="center" style="padding:0px;">UNDER CONSTRUCTION...
+<img src="../img/under.jpg" loading="lazy" style="border-width: 0px;">
+
+</main>
 
 
 <footer style="background-color: black;">
