--- a/projects/nes.html
+++ b/projects/nes.html
@@ -30,12 +30,12 @@
 
 <main style="width: 860px; padding: 20px;">
 
-<img src="../img/project01/01.png" style="width: 33%; 
+<img src="../img/project01/01.png" loading="lazy" style="width: 33%; 
 			float: left;
 			margin-right: 10px;
 			"/>
 			
-<img src="../img/project01/02.jpg" style="width: 20%; 
+<img src="../img/project01/02.jpg" loading="lazy" style="width: 20%; 
 			float: left;
 			margin-right: 10px;
 			"/>
@@ -49,7 +49,7 @@
 
 <main style="width: 860px; padding: 20px;">
 
-<img src="../img/project01/03.png" style="width: 40%; 
+<img src="../img/project01/03.png" loading="lazy" style="width: 40%; 
 			float: left;
 			margin-right: 10px;
 			"/>
@@ -65,12 +65,12 @@
 
 <main style="width: 860px; padding: 20px;">
 
-<img src="../img/project01/04.png" style="width: 30%; 
+<img src="../img/project01/04.png" loading="lazy" style="width: 30%; 
 			float: left;
 			margin-right: 10px;
 			"/>
 			
-<img src="../img/project01/05.jpg" style="width: 19.5%; 
+<img src="../img/project01/05.jpg" loading="lazy" style="width: 19.5%; 
 			float: left;
 			margin-right: 10px;
 			"/>
@@ -87,17 +87,17 @@
 
 
 <div style="height:400px">
-<img src="../img/project01/06.jpg" style="width: 30%; 
+<img src="../img/project01/06.jpg" loading="lazy" style="width: 30%; 
 			float: left;
 			margin-right: 10px;
 			"/>
 			
-<img src="../img/project01/07.jpg" style="width: 30%; 
+<img src="../img/project01/07.jpg" loading="lazy" style="width: 30%; 
 			float: left;
 			margin-right: 10px;
 			"/>	
 			
-<img src="../img/project01/08.jpg" style="width: 30%; 
+<img src="../img/project01/08.jpg" loading="lazy" style="width: 30%; 
 			float: left;
 			margin-right: 10px;
 			"/>	
@@ -115,17 +115,17 @@
 
 
 <div style="height:400px">
-<img src="../img/project01/09.jpg" style="width: 30%; 
+<img src="../img/project01/09.jpg" loading="lazy" style="width: 30%; 
 			float: left;
 			margin-right: 10px;
 			"/>
 			
-<img src="../img/project01/10.jpg" style="width: 30%; 
+<img src="../img/project01/10.jpg" loading="lazy" style="width: 30%; 
 			float: left;
 			margin-right: 10px;
 			"/>	
 			
-<img src="../img/project01/11.jpg" style="width: 30%; 
+<img src="../img/project01/11.jpg" loading="lazy" style="width: 30%; 
 			float: left;
 			margin-right: 10px;
 			"/>	
@@ -143,12 +143,12 @@
 
 
 <div style="height:400px">
-<img src="../img/project01/12.jpg" style="width: 30%; 
+<img src="../img/project01/12.jpg" loading="lazy" style="width: 30%; 
 			float: left;
 			margin-right: 10px;
 			"/>
 			
-<img src="../img/project01/13.jpg" style="width: 30%; 
+<img src="../img/project01/13.jpg" loading="lazy" style="width: 30%; 
 			float: left;
 			margin-right: 10px;
 			"/>	
@@ -169,12 +169,12 @@
 
 
 <div style="height:400px">
-<img src="../img/project01/14.gif" style="width: 30%; 
+<img src="../img/project01/14.gif" loading="lazy" style="width: 30%; 
 			float: left;
 			margin-right: 10px;
 			"/>
 			
-<img src="../img/project01/15.jpg" style="width: 60%; 
+<img src="../img/project01/15.jpg" loading="lazy" style="width: 60%; 
 			float: left;
 			margin-right: 10px;
 			"/>	
@@ -196,12 +196,12 @@
 
 <div style="height:400px">
 
-<img src="../img/project01/16.jpg" style="width: 40%; 
+<img src="../img/project01/16.jpg" loading="lazy" style="width: 40%; 
 			float: left;
 			margin-right: 10px;
 			"/>	
 
-<img src="../img/project01/17.jpg" style="width: 40%; 
+<img src="../img/project01/17.jpg" loading="lazy" style="width: 40%; 
 			float: left;
 			margin-right: 10px;
 			"/>	
@@ -221,7 +221,7 @@
 <main style="width: 860px; padding: 20px;">
 
 <h1 class="red" align="center" style="padding:0px;">UNDER CONSTRUCTION...
-<img src="../img/under.jpg" style="border-width: 0px;">
+<img src="../img/under.jpg" loading="lazy" style="border-width: 0px;">
 
 
 </main>
