Forgot copyright stuff

--- a/projects/amd.html
+++ b/projects/amd.html
@@ -39,7 +39,7 @@
 <footer style="background-color: black;">
 		<br><br>
 		<div class="copyright" style="background-color: red;">
-			<p align="center">Copyright &copy; 2020 - 2025 mansymations.netlify.app</p>
+			<p align="center">Copyright &copy; 2020 - 2025 mansysite.org</p>
 		</div>
 </footer>
 
