--- a/projects/nes.html
+++ b/projects/nes.html
@@ -238,7 +238,7 @@
 			<p align="center"></p>
 		</div>
 		<div class="copyright">
-			<p align="center">Copyright &copy; 2020 - 2025 mansymations.netlify.app</p>
+			<p align="center">Copyright &copy; 2020 - 2025 mansysite.org</p>
 		</div>
 </footer>
 
