--- a/tutorial.html
+++ b/tutorial.html
@@ -23,14 +23,16 @@
 <p align="center" style="padding: 0px;">Published: Jan. 21st 2025</p>
 <p align="center"><a href="index.html" style="padding: 0px;">[Go check out the rest of my site!]</a></p>
 
-<p>This tutorial will guide you through </p>
+<p>This tutorial will guide you through how to install the our modpack for modrinth. (Because you can't figure it out yourself)</p>
 <p></p>
 <p></p>
 </main>
 
 <br>
 
-<main style="width: 860px; padding: 20px;">
+<main style="width: 860px;">
+
+<br>
 
 <button align="center" class="button" style="
     background-color: #4AFF1D; 
@@ -40,7 +42,21 @@
     display: block;
   margin-left: auto;
   margin-right: auto;
-    "><a>Download here!</a></button>
+    "><a href="https://cdn.discordapp.com/attachments/744473287089717273/1330987136647958689/MODS_snalla_1.0.0.mrpack?ex=6790a29d&is=678f511d&hm=3ad3e07b0a6718d3071b22ad5f2532ad861f62775a0d7d733bc0fbbee6aac67a&">Download modpack V1.0!</a></button>
+
+<br>
+
+<button align="center" class="button" style="
+    background-color: #4AFF1D; 
+    color: #000; 
+    border-style:solid;
+	border-width:1px;
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+    "><a href="https://modrinth.com/app">Download Modrinth</a></button>
+
+<p>Step 1. Start by downloading the above</p>
 
 </main>
 
