--- a/tutorial.html
+++ b/tutorial.html
@@ -34,6 +34,10 @@
 
 <br>
 
+<p>Step 1. Start by downloading the stuff that is below</p>
+
+<br>
+
 <button align="center" class="button" style="
     background-color: #4AFF1D; 
     color: #000; 
@@ -56,7 +60,106 @@
   margin-right: auto;
     "><a href="https://modrinth.com/app">Download Modrinth</a></button>
 
-<p>Step 1. Start by downloading the above</p>
+</main>
+
+<br>
+
+<main style="width: 860px;">
+
+<br>
+
+<p>Step 2. Install and open up modrinth. You might need to log in to you're minecraft account so DO THAT!</p>
+
+<br>
+
+<img src="img/tutorial/01.png" loading="lazy" style="width: 40%; 
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			"/>
+
+</main>
+
+<br>
+
+<main style="width: 860px;">
+
+<br>
+
+<p>Step 3. Now you should click on the plus to your left that says "Create new instance"</p>
+
+<br>
+
+<img src="img/tutorial/02.png" loading="lazy" style="width: 40%; 
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			"/>
+			
+<br>
+
+</main>
+
+<br>
+
+<main style="width: 860px;">
+
+<br>
+
+<p>Step 4. A popup will appear here you need to click on "From File". And then on "Import from file"</p>
+
+<br>
+
+<img src="img/tutorial/03.png" loading="lazy" style="width: 40%; 
+			left: 40px;
+			"/>
+			
+<img src="img/tutorial/04.png" loading="lazy" style="width: 40%; 
+			left: 120px;
+			"/>
+			
+<br>
+<br>
+
+</main>
+
+<br>
+
+<main style="width: 860px;">
+
+<br>
+
+<p>Step 5. So now we need to locate the modpack file that you downloaded earlier. Just follow the image below because im to tired to type it out...</p>
+
+<br>
+
+<img src="img/tutorial/05.png" loading="lazy" style="width: 60%; 
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			"/>
+			
+<br>
+
+</main>
+
+<br>
+
+<main style="width: 860px;">
+
+<br>
+
+<p>Step 6. Now the modpack should be installing and after that you can click on the green play button next to the modpack in modrinth.</p>
+
+<br>
+
+<img src="img/tutorial/06.png" loading="lazy" style="width: 60%; 
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			"/>
+			
+<br>
 
 </main>
 
