--- a/tutorial.html
+++ b/tutorial.html
@@ -22,6 +22,7 @@
 <h2 align="center">How to install our modpack for dumb dumbs</h1>
 <p align="center" style="padding: 0px;">Published: Jan. 21st 2025</p>
 <p align="center"><a href="index.html" style="padding: 0px;">[Go check out the rest of my site!]</a></p>
+<p align="center"><a href="cursedtutorial.html" style="padding: 0px;">[If your a curseforge fanboy then look into my cursedforge tutorial]</a></p>
 
 <p>This tutorial will guide you through how to install the our modpack for modrinth. (Because you can't figure it out yourself)</p>
 <p></p>
@@ -46,7 +47,7 @@
     display: block;
   margin-left: auto;
   margin-right: auto;
-    "><a href="https://cdn.discordapp.com/attachments/744473287089717273/1330987136647958689/MODS_snalla_1.0.0.mrpack?ex=6790a29d&is=678f511d&hm=3ad3e07b0a6718d3071b22ad5f2532ad861f62775a0d7d733bc0fbbee6aac67a&">Download modpack V1.0!</a></button>
+    "><a href="https://cdn.discordapp.com/attachments/744473287089717273/1330987136647958689/MODS_snalla_1.0.0.mrpack?ex=6790a29d&is=678f511d&hm=3ad3e07b0a6718d3071b22ad5f2532ad861f62775a0d7d733bc0fbbee6aac67a&">Download modpack V1.0! (for modrinth)</a></button>
 
 <br>
 
