--- a/cursedtutorial.html
+++ b/cursedtutorial.html
@@ -46,7 +46,7 @@
     display: block;
   margin-left: auto;
   margin-right: auto;
-    "><a href="https://cdn.discordapp.com/attachments/744473287089717273/1330987136647958689/MODS_snalla_1.0.0.mrpack?ex=6790a29d&is=678f511d&hm=3ad3e07b0a6718d3071b22ad5f2532ad861f62775a0d7d733bc0fbbee6aac67a&">Download modpack V1.0! (for curseforge)</a></button>
+    "><a href="https://download1509.mediafire.com/gldpcdyw3ihgvtyxYYwsV8GV4NwwttJ1qxqm9OisOTfM7AxiCJw0oE8mjl9yx3F17IT-3ICrqsWvXLHX2Mp7JO0ODKIS6iMbRppfvBq3ZifEvnHasfbRfj28BuhNNes4ic0p2XE5k99UPc57EZurCEEpwV4DwlnVH8eZ6XVc2Hh_6EY/3a4x0g5t3mj56zc/MODS+sn%C3%A4lla-1.0.1.zip">Download modpack V1.0.1! (for curseforge)</a></button>
 
 <br>
 
@@ -72,6 +72,13 @@
 
 <br>
 
+<img src="img/tutorial/forge/04.png" loading="lazy" style="width: 60%; 
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			"/>
+
+<br>
 
 </main>
 
@@ -81,11 +88,11 @@
 
 <br>
 
-<p>Step 3. Now you should click on the plus to your right that says "Create Custom Profile"</p>
+<p>Step 3. Click on the import button</p>
 
 <br>
 
-<img src="img/tutorial/forge/01.jpg" loading="lazy" style="width: 70%; 
+<img src="img/tutorial/forge/05.png" loading="lazy" style="width: 70%; 
 			display: block;
 			margin-left: auto;
 			margin-right: auto;
@@ -101,11 +108,11 @@
 
 <br>
 
-<p>Step 4. A popup will appear, you need to click on the text that says "import"</p>
+<p>Step 4. A popup will appear. So now we need to locate the .zip file that you downloaded earlier. Just follow the image below because im to tired to type it out...</p>
 
 <br>
 
-<img src="img/tutorial/forge/02.webp" loading="lazy" style="width: 40%; 
+<img src="img/tutorial/forge/07.png" loading="lazy" style="width: 60%; 
 			display: block;
 			margin-left: auto;
 			margin-right: auto;
@@ -122,27 +129,7 @@
 
 <br>
 
-<p>Step 5. So now we need to locate the modpack file that you downloaded earlier. Just follow the image below because im to tired to type it out...</p>
-
-<br>
-
-<img src="img/tutorial/05.png" loading="lazy" style="width: 60%; 
-			display: block;
-			margin-left: auto;
-			margin-right: auto;
-			"/>
-			
-<br>
-
-</main>
-
-<br>
-
-<main style="width: 860px;">
-
-<br>
-
-<p>Step 6. Now the modpack should be installing and after that you can click on the orange play button below the modpack</p>
+<p>Step 5. Now the modpack should be installing and after that you can click on the orange play button below the modpack</p>
 
 <br>
 
